// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer rendering Should match snapshot of AudioPlayer when isPlaying is false 1`] = `
Array [
  <button
    className="track__button track__button--play"
    disabled={true}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio
      onCanPlayThrough={[Function]}
      src=""
    />
  </div>,
]
`;

exports[`AudioPlayer rendering Should match snapshot of AudioPlayer when isPlaying is true 1`] = `
Array [
  <button
    className="track__button track__button--pause"
    disabled={true}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio
      onCanPlayThrough={[Function]}
      src=""
    />
  </div>,
]
`;
